# FootballHub

./: .env.example  .gitignore  .replit  API_KEY_UPDATE_REPORT.md  API_KEY_UPDATE_SUMMARY.md  CODESANDBOX_COZUM_OZETI.md  CODESANDBOX_DEPLOY.md  CODESANDBOX_FINAL_COZUM.md  CODESANDBOX_FIXES.md  CODESANDBOX_INSTRUCTIONS.md  CODESANDBOX_SIMPLE.md  CONTINUOUS_OPTIMIZATION_REPORT.md  DUZELTMELER_OZETI.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_SYNC_SUMMARY_TR.md  GITHUB_CODESANDBOX_SYNC_GUIDE.md  IMPLEMENTATION_GUIDE.md  OPTIMIZATION_RESULTS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  OPTIMIZED_MATCH_PREDICTION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PREDICTION_ERROR_FIX_SUMMARY.md  README.md  README_CODESANDBOX.md  README_RENDER.md  SETUP_API_KEYS.md  SYSTEM_ARCHITECTURE_ANALYSIS.md  TAHMIN_BUTTON_ERROR_FIX_SUMMARY.md  api_cache_manager.py  api_football.py  api_key_update_verification.py  api_routes.py  bug_fixes_report.md  bug_fixes_summary.md  cache_optimizer.py  codesandbox_setup.sh  codesandbox_start.py  continue_optimizations.py  continuous_optimization_report.json  dynamic_team_analyzer.py  (+43 more)
.codesandbox/: tasks.json
attached_assets/: README_1750349992520.md
core/: prediction_consistency.py
static/css/: custom.css  match-actions.css  match-insights.css  prediction-modal.css  widget-style.css  widgetCountries.css  widgetLeague.css
static/js/: api_football_debug.js  custom.js  fixed_custom.js  jquery.widgetCountries.js  jquery.widgetLeague.js  main.js  prediction-handler.js  team-halfTime-stats.js  team_history.js  (+1 more)
templates/: base.html  fixtures.html  index.html
(+19 files in other folders)
